# qiree

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CONTRIBUTING.rst  COPYRIGHT  COPYRIGHT.md  DeveloperDocumentation.md  README.md  TODO.md  UserDocumentation.md  _config.yml  index.md  publications.md  references.md
.github/workflows/: build-fast.yml  build-lightning.yml  deploy-pages.yml  doc.yml  pr.yml  push.yml
app/: CMakeLists.txt  qir-lightning.cc  qir-qsim-lib.cc  qir-qsim.cc  qir-xacc-lib.cc  qir-xacc.cc
cmake/: CgvFindVersion.cmake  FindLLVM.cmake  FindXACC.cmake  QIREEConfig.cmake.in  QIREEUtils.cmake
doc/: CMakeLists.txt  COPYRIGHT  DeveloperDocumentation.md  conf.py  config.json.in  index.rst
doc/_python/: monkeysphinx.py
doc/_static/: ornltm-header-qiree.tex  references.bib
doc/appendix/: administration.rst  development.rst  license.rst  release-history.rst
doc/main/: acknowledgments.rst  api.rst  examples.rst  installation.rst  introduction.rst  overview.rst  references.rst  usage.rst
doc/main/api/: qiree.rst  qirxacc.rst
docker/: Dockerfile
examples/: .gitignore  arithmetic.ll  bell.ll  bell_ccx.ll  bv11010.ll  dynamicbv.ll  if_else.ll  input.ll  loop.ll  multiple.ll  pe_onethird_06.ll  phaseest.ll  rotation.ll  staq_example.cpp  teleport.ll
examples/others/: .gitignore  berstein_vazirani_11010.ll  berstein_vazirani_11010.py  ghz.ll  ghz.py  if_else.py  if_result.ll  if_result.py  install_qat.txt  llvm_link_test.cpp  multiplefunction.ll  pe_onethird_06.ll  phase_estimation.ll  phase_estimation.py  phase_estimation_functions.ll  phase_estimation_loops.py  pyqir_one_rotation.py  pyqir_several_gates.py  pyqir_teleport.ll  pyqir_teleport.py  qir_to_xacc_bell.cpp  qir_to_xacc_teleport.cpp  qir_to_xacc_test_main.cpp  qir_to_xaccir_hashtable.py  simple_input_print_arithmetic_with_qubit_added.ll  simple_print_arithmetic.c  simple_print_arithmetic.ll  simple_print_arithmetic_with_qubit_added.ll  singlefunction_branching_if_else.ll  singlefunction_branching_loop.ll  singlefunction_simplecase.ll  staq_example.cpp  teleport.ll  teleport.py  xacc_teleport.cpp  xacc_teleport_inst.cpp
examples/qwerty/: bell.ll  bv1101.ll  ghz5.ll
examples/unitaryhack2025/: bit_flip_error_correction.ll  kitaev_phase_estimation.ll  measure_reset.ll
scripts/: generate-pubs.py
scripts/apptainers/: README.md  apptainer.def
scripts/cmake-presets/: goldfinger.json
scripts/dev/: generate-bindings.py  qiree-gen.py  qis.ll  rt.ll
scripts/docker/: Dockerfile
src/: CMakeLists.txt  ExecutionBackend.hpp  ExecutionBackendFactory.cpp  ExecutionBackendFactory.hpp  ExecutionBackendHandle.cpp  ExecutionBackendHandle.hpp  GlobalMappingAssociator.cpp  GlobalMappingAssociator.hpp  QuantumExecutionEngine.cpp  Singleton.hpp  XACCExecutionBackend.cpp  XACCExecutionBackend.hpp  manifest.json  qir_compiler.cpp  qir_compiler.hpp  qiree_config.h.in  qiree_version.h.in
src/cqiree/: CMakeLists.txt  CQiree.cc  CQiree.h  QireeManager.cc  QireeManager.hh
src/qiree/: Assert.cc  Assert.hh  CMakeLists.txt  Executor.cc  Executor.hh  Macros.hh  MathInterface.hh  Module.cc  Module.hh  OutputDistribution.cc  OutputDistribution.hh  QuantumInterface.hh  QuantumNotImpl.cc  QuantumNotImpl.hh  RecordedResult.hh  ResultDistribution.cc  ResultDistribution.hh  RuntimeInterface.hh  SingleResultRuntime.cc  SingleResultRuntime.hh  Types.hh
src/qiree/detail/: EndGuard.hh  FunctionChecker.hh  GlobalMapper.hh
src/qirlightning/: CMakeLists.txt  LightningDefaultRuntime.cc  LightningDefaultRuntime.hh  LightningQuantum.cc  LightningQuantum.hh  LightningRuntime.cc  LightningRuntime.hh  README.md  support_catalyst.cmake
src/qirlightning/catalyst_runtime/: Makefile
src/qirlightning/simple_demo/: README.md  test_rt_device.cpp
src/qirqsim/: BufferManager.cc  BufferManager.hh  CMakeLists.txt  QsimDefaultRuntime.cc  QsimDefaultRuntime.hh  QsimQuantum.cc  QsimQuantum.hh  QsimRuntime.cc  QsimRuntime.hh  QsimTupleRuntime.cc  QsimTupleRuntime.hh  qsimDefaultRuntime.cc  qsimDefaultRuntime.hh  qsimQuantum.cc  qsimQuantum.hh  qsimTupleRuntime.cc  qsimTupleRuntime.hh
src/qirxacc/: CMakeLists.txt  XaccDefaultRuntime.cc  XaccDefaultRuntime.hh  XaccQuantum.cc  XaccQuantum.hh  XaccTupleRuntime.cc  XaccTupleRuntime.hh
test/: CMakeLists.txt  Test.cc  Test.hh  qiree_test.hh  qiree_test_config.h.in
test/cqiree/: CQiree.test.cc  cqiree.test.cc
test/data/: minimal.ll  pyqir_several_gates.ll
test/data/unitaryhack2025/: bit_flip_error_correction.ll  kitaev_phase_estimation.ll  measure_control_loop.ll
test/qiree/: Executor.test.cc  Module.test.cc  QuantumTestImpl.cc  QuantumTestImpl.hh  ResultDistribution.test.cc  Stream.hh
test/qirlightning/: LightningQuantum.test.cc
test/qirqsim/: QsimQuantum.test.cc  qsimQuantum.test.cc
test/qirxacc/: XaccQuantum.test.cc
